<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="CAR" Id="{903b4816-ae89-40d5-8573-3632da433666}">
    <Declaration><![CDATA[TYPE CAR :
STRUCT
	pX : REAL;
	pY : REAL;
	currentTrack :SINT;
	//queueNum : DINT;
	carID : SINT;
	present: BOOL;
	percentFull: REAL;
	positionID: INT;
	fwdCMD: BOOL;
	revCMD: BOOL;
	initCar: BOOL;
	isAttachedBlue: BOOL;
	isOnBOardRed: BOOL;
	isOnBoardBlue: BOOL;
	cmdAttach: BOOL;
	cmdDetach: BOOL;
	canAttachBlue: BOOL;
	canAttachRed: BOOL;
	visible: BOOL;
	isAttachedRed: BOOL;
	trackInitialPosID: INT;
	ons: R_TRIG;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>